echoserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver-ns
  labels:
    istio-injection: enabled
