echoserver/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-echoserver
  namespace: echoserver-ns
  labels:
    app: echoserver
spec:
  replicas: 0
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver
          # image: gcr.io/google_containers/echoserver:1.10
          image: cruse/echoserver-arm:1.8
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 30Mi
            requests:
              cpu: 10m
              memory: 10Mi
