echoserver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
  namespace: echoserver-ns
spec:
  selector:
    app: echoserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
