echoserver/echoserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: echoserver-ingress
 namespace: echoserver-ns
 annotations:
   kubernetes.io/ingress.class: kong
spec:
  tls:
    - hosts:
        - localhost
      secretName: localhost
rules:
 - host: localhost
   http:
     paths:
       - path: /echo
         pathType: ImplementationSpecific
         backend:
           service:
             name: echoserver-service
             port:
               number: 80
---
